style.css
a,a:hover, a:focus {
	color: #333332;
	text-decoration: none;
	outline:0;
}


/*********************************************************
				SITE HEADER
*********************************************************/

.site-header {
	position: absolute;
	
	top: 0;
	left: 0;
	right: 0;
	
	height: 500px;
}

.site-header-full{
	bottom:0;
	/* important to keep this property for small resolutions*/
	height:initial !important;
}

.site-header-labs{
	height:75px !important;
}

.site-header .image-src{
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	z-index: -1;

	background-position: center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

.site-header .title{
	text-align: center;
	margin-top: 150px;
	color: #FFF;
}

.site-header .title.main-title{
	margin-top:170px;
}

.site-header .title h1{
	font-size: 50px;
	color: #FFFFFF;
	font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
}

.site-header .title.main-title h1{
	font-size:70px;
}

.site-header .title a, 
.site-header .title a:hover,
.site-header .title a:focus{
	color:#FFF;
}

.site-header .menu{
	text-align: center;
	position:absolute;
	width:100%;
	bottom:13px;
}

.site-header .menu > ul{
	padding-left: 0;
}

.site-header .menu > ul li{
	list-style: none;
	display:inline-block;
	
	margin-left: 1em;
	font-size: 22px;
	border-radius: 10px;
	width: 2em;
	height: 2em;
}

.site-header .menu > ul li i.glyphicon{
	top:8px;
}

.site-header .menu > ul li a{
	color:#FFF;
}

.site-header + div.container-fluid{
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing:border-box;
	
	padding-top:520px;	/* for site header */
}


.site-header .menu > ul li.active{
	background-color:black;
	color: white;
}
.site-header .menu > ul li:not(.active):hover{
	background-color:green;
	color:pink;
}

.site-header .menu > ul li {
	/*color: #F8701C;*/
	color: #1CC1F8;
}

.site-header .title-404{
	/* important to keep this property for small resolutions*/
	bottom:50% !important;
}

/***************************************************
			POSTS LIST: Main blog page
***************************************************/

.container-fluid > .posts-list, 
.container-fluid > .form {
	margin-left: auto;
	margin-right: auto;
	width: 80%;
	max-width: 47em;
}
.container-fluid > .form .form-inline .input-group{
	width:100%;
}

.container-fluid > .form .form-inline .input-group .input-group-addon{
	width:1%;
}

.posts-list > article{
	
	font-size: 18px;
	color: rgba(0,0,0,0.6);
	letter-spacing: -0.02em;
	font-weight: 300;
	font-style: normal;
}

.posts-list > article .post-content{
	text-align:justify;
	margin-left:1em;
	margin-top: 0.5em;
}

.posts-list article .post-category,
.posts-list article .post-category a,
.posts-list article .post-category a:hover, 
.posts-list article .post-category a:focus {
	color:#b3b3b1;
}


.posts-list > article footer{
	margin-top:1em;
}

.posts-list article > header h3{
	margin-top:10px;
	margin-bottom:10px;
}

.posts-list article h1,
.posts-list article h2,
.posts-list article h3,
.posts-list article h4{
	font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
	font-weight: 700;
	font-style: normal;
}

.posts-list article header h3{
	letter-spacing: -0.02em;
	font-size: 25px;
	line-height: 1.2;
	margin-bottom: 2px;
}

.posts-list hr{
	width:50%;
	margin-top:40px;
	margin-bottom:40px;
}

.post-meta{
	position:relative;
	display:inline-block;
}

.site-header .post-meta{
	margin-left:0;
	margin-top:1em;
}

article footer .post-category .post-meta {
	margin-left:1em;
}

.post-meta > div:first-child + div {
	padding-left:40px;
	box-sizing:border-box;
}

.post-meta > div:first-child {
	position:absolute;
	top:-8px;
	left:0;
	
	overflow:hidden;
	border-radius:15px;
}

/***************************************************
			SINGLE POST
***************************************************/

.site-header .title .post-metadata{
	font-size:15px;
}

.container-fluid > .post {
	margin-left: auto;
	margin-right: auto;
	width: 80%;
	max-width: 40em;
}

.post > article header .post-category{
	color: #b3b3b1;
	font-size: 16px;
	text-align: right;
}

.post > article .post-content{
	font-family: Cambria,"Times New Roman",Times,serif;
	font-weight: 400;
	font-style: normal;
	font-size: 22px;
	line-height: 1.6;
	color: rgba(0,0,0,0.7);
	text-align: justify;
}

.post > article .post-content a,
.post > article .post-content a:hover, 
.post > article .post-content a:focus {
	text-decoration: none;
	background-image: -moz-linear-gradient(top, rgba(0,0,0,0) 50%, rgba(0,0,0,0.6) 50%);
	background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 50%, rgba(0,0,0,0.6) 50%);
	background-image: -o-linear-gradient(top, rgba(0,0,0,0) 50%, rgba(0,0,0,0.6) 50%);
	background-image: linear-gradient(to bottom, rgba(0,0,0,0) 50%, rgba(0,0,0,0.6) 50%);
	background-repeat: repeat-x;
	background-size: 2px 2px;
	background-position: 0 21px;
}

.post > article .post-content strong{
	color: rgba(0,0,0,0.8);
}

.post > article .post-content h1,
.post > article .post-content h2,
.post > article .post-content h3{
	color: rgba(0,0,0,0.8);
}

.post > article .post-content h1{
	letter-spacing: -0.04em;
	font-size: 50px;
	line-height: 1.1;
	margin-bottom: 8px;
}

.post > article .post-content h2{
	letter-spacing: -0.02em;
	font-size: 32px;
	line-height: 1.2;
}

.post > article footer{
	text-align:right;
	font-size:15px;
}

.post > article footer a.anchor-link{
}

.post > article .post-content div.wp-caption{
	width:100% !important;
}

.post > article .post-content div.wp-caption.aligncenter{
	text-align:center;
}

.post > article .post-content p.wp-caption-text{
	font-size:0.8em;
}

/***************************************************
		COMMENTS
***************************************************/


.post .comments textarea{
	width:100%;
}

.post .comments .comment-body{
	font-size:15px;
}

.post .comments .comment-meta.commentmetadata{
	font-size:12px;
	text-align: right;
	margin-bottom: 10px;
}

.post .comments .comment-respond form label{
	font-size:15px;
}

/***************************************************
			SHARING BUTTONS
***************************************************/

.sharing-buttons{
	text-align:right;
	margin-top: 50px;
}

.sharing-buttons > span{
	margin-right: 10px;
	font-size: 15px;
	font-weight: bold;
}

.sharing-buttons > div{
	display:inline-block;
	padding:10px;
	border-radius:10px;
	background-color:lightblue;
}

.post footer .sharing-buttons{
	text-align:left;
}

/***************************************************
			Miscellaneous
***************************************************/

#page404 > h1 {
	font-size: 7em;
}

#page404 > p {
	font-size: 4em;
}

.form > form > .form-group {
	width: 80%;
}

.form > form {
	margin-bottom: 2em;
}

body{
	font-size:18px;
	font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
}

/***************************************************
			Mobile adaptation
***************************************************/

@media screen and (max-width: 1200px){
	.site-header{
		height: 400px;
	}
	
	.site-header + div.container-fluid{
		padding-top:420px;	/* for site header */
	}
	
	.site-header .title{
		margin-top: 100px;
	}
	
	.site-header .title.main-title{
		margin-top:150px;
	}
	
}

@media screen and (max-width: 800px){
	.post > article .post-content{
		font-size:20px;
	}
}


@media screen and (max-width: 600px){
	.site-header{
		height: 350px;
	}
	
	.site-header + div.container-fluid{
		padding-top:370px;	/* for site header */
	}
	
	.site-header .title{
		margin-top: 50px;
	}
	
	.site-header .title h1{
		font-size: 40px;
	}
	
	.site-header .title.main-title{
		margin-top:120px;
	}
	
	.site-header .title.main-title h1{
		font-size:60px;
	}
	
	.post > article .post-content h1{
		font-size: 39px;
		line-height: 1.1;
	}

	.post > article .post-content h2{
		font-size: 30px;
	}
	
	.post > article .post-content h3{
		font-size: 26px;
		
		margin-top: 30px;
		margin-bottom: 15px;
		color: rgba(0,0,0,1);
	}
	
	.post > article .post-content{
		font-size:18px;
	}
	
	.post > article .post-content a,
	.post > article .post-content a:hover, 
	.post > article .post-content a:focus {
		background-position: 1px 19px;
	}
	
	.post > article .post-content ul,
	.post > article .post-content ol{
		padding-left:30px;
	}

	
	.posts-list article{
		font-size:16px;
	}
	
	.posts-list article header h3{
		font-size: 20px;
	}
	
	.posts-list > article .post-category{
		font-size:14px;
	}
	
	.container-fluid > .posts-list, 
	.container-fluid > .form {
		width: 90%;
	}
	
	.container-fluid > .post {
		width: 90%;
	}

}

